# code_agent_101

./: .coveragerc  .env.example  .gitignore  CLAUDE.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  alembic.ini  frontend_tutorial.md  pyproject.toml  pytest.ini  todo.md
backend/: __init__.py  __main__.py  main.py
backend/api/: __init__.py  dependencies.py  router.py
backend/api/v1/: __init__.py  auth.py  chat.py  chat_ws.py  kinds.py  messages.py  sessions.py  tasks.py  user_ws.py
backend/core/: security.py
backend/database/: __init__.py  base.py  engine.py
backend/database/migrations/: env.py
backend/database/migrations/versions/: 001_initial_schema.py
backend/models/: __init__.py  kinds.py  messages.py  session.py  tasks.py  user.py
backend/schemas/: __init__.py  auth.py  base.py  bot.py  chat.py  ghost.py  message.py  model.py  session.py  shell.py  skill.py  task.py  team.py  websocket.py
backend/services/: __init__.py  auth_service.py  base.py  bot.py  chat.py  ghost.py  message.py  model.py  session.py  shell.py  skill.py  task.py  task_executor.py  team.py
backend/websocket/: __init__.py  auth.py  event_bus.py  manager.py  session_manager.py  task_events.py  user_room_manager.py
chat_shell/: __init__.py  __main__.py  cli.py  config.py  utils.py
chat_shell/agent/: __init__.py  agent.py  builder.py  compressor.py
chat_shell/api/: __init__.py  app.py  dependencies.py  routes.py
chat_shell/models/: config.py
chat_shell/package/: __init__.py  interface.py
chat_shell/skills/: base.py  manager.py
chat_shell/storage/: __init__.py  interfaces.py  json_storage.py  memory_storage.py  remote_storage.py  sqlite_storage.py
chat_shell/streaming/: __init__.py  buffer.py  core.py  emitter.py  events.py  exceptions.py  state.py
chat_shell/tools/: __init__.py  exceptions.py  file_reader.py  mcp.py  registry.py  subscription.py
chat_shell_101/: agent.py
chat_shell_101/agent/: agent.py  builder.py  config.py
chat_shell_101/api/: schemas.py  sse.py
chat_shell_101/models/: __init__.py  converter.py  exceptions.py  factory.py
chat_shell_101/skills/: __init__.py  exceptions.py
chat_shell_101/tools/: __init__.py  base.py  calculator.py  data_table.py  enhanced_registry.py  evaluation.py  knowledge_base.py  registry.py  skill_loader.py  web_search.py
doc/: architecture.md  epic_phase_0.md  epic_phase_2.md  epic_phase_3.md  todo.md
doc/adr/: 001-core-agent-system.md  002-multi-model-llm-integration.md  003-epic-3-tools-system.md  003-tools-system.md  004-deployment-modes.md  005-streaming-response-system.md  006-storage-layer.md  007-database-schema-and-models.md  008-epic-8-pydantic-schemas-and-validation.md  008-pydantic-schemas-and-validation.md  009-crud-service-layer.md  010-restful-api-endpoints.md  011-authentication-authorization.md  012-task-management-api.md  013-chat-shell-integration.md  014-websocket-chat-endpoint.md  015-message-history-management.md  016-chat-session-state-management.md  017-real-time-event-broadcasting.md  018-chat-execution-engine-integration.md  019-nextjs-frontend-architecture.md  020-authentication-user-management.md  021-crd-resource-management-ui.md  022-task-management-dashboard.md  023-real-time-chat-interface.md  024-dashboard-and-navigation.md  025-error-handling-and-user-feedback.md
doc/epic/: backend_phase_1_crd.md  backend_phase_2_chat.md  backend_phase_2_chat_execution.md  chat_shell_phase_1_enhanced.md  frontend_mvp.md
doc/review/: backend_phase_1_completion_report.md  backend_phase_2_completion_report.md
doc/task/: mvp_implement_suggestion.md
frontend/: README.md  index.html  jest.config.js  login.html  package-lock.json  package.json  tailwind.config.ts
frontend/css/: styles.css
frontend/js/: api.js  app.js  auth.js
frontend/pages/: bots.html  ghosts.html  models.html  shells.html  skills.html  teams.html
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(dashboard)/: error.tsx  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  index.ts
frontend/src/components/error/: ErrorBoundary.tsx  index.ts
frontend/src/components/layout/: BreadcrumbNav.tsx  index.ts
frontend/src/components/resources/: ResourceForm.tsx  ResourceList.tsx  index.ts
frontend/src/components/tasks/: TaskCreateModal.tsx
frontend/src/components/ui/: ConfirmDialog.tsx  SkeletonScreens.tsx  index.ts
frontend/src/context/: auth-context.tsx
frontend/src/hooks/: useChat.ts  useErrorHandler.ts  useNetworkStatus.ts  useResources.ts  useTasks.ts  useTeams.ts
frontend/src/services/: agents.ts  api.ts  auth.ts  index.ts  resources.ts  tasks.ts  teams.ts
frontend/src/types/: auth.ts  chat.ts  index.ts  message.ts  resources.ts  session.ts  task.ts
frontend/src/utils/: validation.ts
tests/: README.md  __init__.py  conftest.py
tests/agent/: test_agent.py  test_builder.py  test_compressor.py  test_config.py
tests/api/: __init__.py  test_schemas.py
tests/frontend/: agents.test.ts  auth.test.ts  build-verification.test.ts  chat.test.ts  dashboard.test.ts  error-handling.test.ts  project-setup.test.ts  resources.test.ts  tasks.test.ts  teams.test.ts
tests/integration/crd_backend/: test_database_connection.py
tests/integration/crd_backend/migrations/: test_migrations.py
tests/models/: test_config.py  test_converter.py  test_exceptions.py  test_factory.py
tests/package/: test_interface.py
tests/skills/: test_base.py  test_exceptions.py  test_manager.py
tests/storage/: test_sqlite_storage.py
tests/streaming/: test_buffer.py  test_core.py  test_emitter.py  test_events.py  test_state.py
tests/tools/: test_base.py  test_exceptions.py  test_file_reader.py  test_web_search.py
tests/unit/chat_shell/agent/: test_agent.py  (+3 more)
tests/unit/test_config/: test_config.py
tests/unit/test_storage/: test_interfaces.py  test_json_storage.py  test_memory_storage.py
tests/unit/test_tools/: test_base.py  test_calculator.py  test_registry.py
(+59 files in other folders)
