[project]
name = "chat-shell-101"
version = "0.1.0"
description = "Simplified CLI chat tool with LangGraph and OpenAI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Chat Shell Team"},
]

dependencies = [
    "click>=8.1.0",
    "httpx[socks]>=0.28.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph>=0.0.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
chat-shell = "chat_shell_101.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_shell_101"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "--asyncio-mode=auto",
]
markers = [
    "integration: integration tests",
    "slow: slow tests",
    "unit: unit tests",
    "async: async tests",
    "epic_1: Epic 1 - Core Agent System",
    "epic_2: Epic 2 - Multi-Model LLM Integration",
    "epic_3: Epic 3 - Tools System",
    "epic_4: Epic 4 - Deployment Modes",
    "epic_5: Epic 5 - Streaming Response System",
    "epic_6: Epic 6 - Storage Layer",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
