[project]
name = "code-agent"
version = "0.1.0"
description = "code agent"
readme = "doc/architecture/architecture.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Code Agent Team"},
]

dependencies = [
    "click>=8.1.0",
    "fastapi>=0.104.0",
    "httpx[socks]>=0.28.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph>=0.0.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "rich>=13.0.0",
    "sse-starlette>=1.6.5",
    "tiktoken>=0.5.0",
    "uvicorn[standard]>=0.24.0",
    # Epic 7: Database Schema & Models
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # Epic 11: Authentication & Authorization (using PyJWT already installed)
    "pyjwt>=2.11.0",
]

[project.optional-dependencies]
anthropic = [
    "langchain-anthropic>=0.1.0",
]
google = [
    "langchain-google-genai>=1.0.0",
]
all = [
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
chat-shell = "chat_shell.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chat_shell"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "--asyncio-mode=auto",
]
markers = [
    # Test type markers
    "unit: Unit tests - fast, isolated component tests",
    "integration: Integration tests - component interaction tests",
    "e2e: End-to-end tests - full system tests",
    "slow: Slow tests that should be run separately",
    "async: Async tests requiring asyncio support",
    # Component markers
    "backend: Backend CRD management tests",
    "chat_shell: Chat shell tests",
    # Epic markers
    "epic_1: Epic 1 - Core Agent System",
    "epic_2: Epic 2 - Multi-Model LLM Integration",
    "epic_3: Epic 3 - Tools System",
    "epic_4: Epic 4 - Deployment Modes",
    "epic_5: Epic 5 - Streaming Response System",
    "epic_6: Epic 6 - Storage Layer",
    "epic_7: Epic 7 - Database Schema & Models",
    "epic_8: Epic 8 - Pydantic Schemas & Validation",
    "epic_9: Epic 9 - CRUD Service Layer",
    "epic_10: Epic 10 - RESTful API Endpoints",
    "epic_11: Epic 11 - Authentication & Authorization",
    "epic_21: Epic 21 - Database Schema Extension",
]
